Updates to skills and html tags

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html class="no-js" lang="en">
 
 <head>
   <meta charset="utf-8">
@@ -43,18 +43,18 @@
 
   <header class="header-color">
 
-    <div class="sticky" aria-label="navigation">
+    <div class="sticky" aria-label="navigation bar">
       <nav>
         <ul>
-          <li><a href="#portfolio">Portfolio</a></li>
-          <li><a href="#skills">Skills</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="#portfolio" aria-label="portfolio hyperlink">Portfolio</a></li>
+          <li><a href="#skills" aria-label="skills hyperlink">Skills</a></li>
+          <li><a href="#about" aria-label="about hyperlink">About</a></li>
+          <li><a href="#contact" aria-label="contact hyperlink">Contact</a></li>
         </ul>
       </nav>
     </div>
 
-    <div class="content-wrapper" aria-label="welcome">
+    <div class="content-wrapper" aria-label="welcome to Anne's portfolio website">
 
       <div class="name-band">
         <h1>anne.sk</h1>
@@ -68,7 +68,7 @@
 
   </header>
 
-  <section class="portfolio" id="portfolio" aria-label="portfolio">
+  <section class="portfolio" id="portfolio" aria-label="portfolio section">
     <!-- project section with links to live sites -->
     <h3>Portfolio</h3>
 
@@ -77,7 +77,7 @@
       <div class="portfolio-piece">
         <figure>
           <a href="https://e5pmvy.csb.app/" target="_blank">
-            <img src="img/sticky-note-app.png" alt="Sticky Note App">
+            <img src="img/sticky-note-app.png" alt="Sticky Note App link">
           </a>
         </figure>
         <h4>Sticky Note App</h4>
@@ -91,13 +91,15 @@
           <button class="button-skills" role="button">JSX</button>
         </div>
 
-        <!-- javascript needed -->
-        <button class="button-52" role="button">Live Page</button>
+        <a href="https://e5pmvy.csb.app/" target="_blank" aria-label="sticky note app live page">
+          <button class="button-52" role="button">Live Page</button>
+        </a>
       </div>
 
       <div class="portfolio-piece">
         <figure>
-          <a href="https://wesiptea.github.io/github-repo-gallery/" target="_blank">
+          <a href="https://wesiptea.github.io/github-repo-gallery/" target="_blank"
+            aria-label="github repository gallery link">
             <img src="img/github-gallery.png" alt="GitHub Repository Gallery">
           </a>
         </figure>
@@ -114,13 +116,15 @@
           <button class="button-skills" role="button">GitHub</button>
         </div>
 
-        <!-- javascript needed -->
-        <button class="button-52" role="button">Live Page</button>
+        <a href="https://wesiptea.github.io/github-repo-gallery/" target="_blank"
+          aria-label="github repository live page link">
+          <button class="button-52" role="button">Live Page</button>
+        </a>
       </div>
 
       <div class="portfolio-piece">
         <figure>
-          <a href="https://wesiptea.github.io/guess-the-word/" target="_blank">
+          <a href="https://wesiptea.github.io/guess-the-word/" target="_blank" aria-label="guess the word game link">
             <img src="img/guess-word.png" alt="Guess the Word Game">
           </a>
         </figure>
@@ -137,13 +141,15 @@
           <button class="button-skills" role="button">GitHub</button>
         </div>
 
-        <!-- javascript needed -->
-        <button class="button-52" role="button">Live Page</button>
+        <a href="https://wesiptea.github.io/guess-the-word/" target="_blank" aria-label="guess the word live page link">
+          <button class="button-52" role="button">Live Page</button>
+        </a>
       </div>
 
       <div class="portfolio-piece">
         <figure>
-          <a href="https://wesiptea.github.io/unplugged-retreat-updated/" target="_blank">
+          <a href="https://wesiptea.github.io/unplugged-retreat-updated/" target="_blank"
+            aria-label="unplugged retreats website link">
             <img src="img/unplugged-img.png" alt="unplugged retreats website">
           </a>
         </figure>
@@ -158,8 +164,10 @@
           <button class="button-skills" role="button">Flexbox</button>
         </div>
 
-        <!-- javascript needed -->
-        <button class="button-52" role="button">Live Page</button>
+        <a href="https://wesiptea.github.io/unplugged-retreat-updated/" target="_blank"
+          aria-label="unplugged retreats website live site link">
+          <button class="button-52" role="button">Live Page</button>
+        </a>
       </div>
 
     </div>
@@ -168,7 +176,7 @@
   <!-- end of portfolio section -->
 
 
-  <section class="skills-section" id="skills" alt="my skills">
+  <section class="skills-section" id="skills" aria-label="my skills">
     <!-- additional information about abilities - tech and soft? -->
     <div class="skills" id="skills-background">
       <h3>Skills</h3>
@@ -189,10 +197,11 @@
       </ul>
     </div>
 
-    <div>
+    <div class="skills" id="additional-skills">
       <h3>Additional Skills</h3>
-      <ul class="skills" id="additional">
+      <ul class="additional-skills" id="additional">
         <li>Client Relations</li>
+        <li>Solution-focused</li>
         <li>Collaborative Problem-Solving</li>
         <li>Working Remotely</li>
         <li>Applying Research</li>
@@ -204,39 +213,43 @@
   </section>
   <!-- end of skills -->
 
-  <section class="about-section" id="about" aria-label="about">
+  <section class="about-section" id="about" aria-label="about Anne">
     <!-- monochrome image -->
-    <img src="img/portrait-500px.png" class="portrait-photo" id="portrait" aria-label="portrait of Anne">
+    <img src="img/portrait-500px.png" class="portrait-photo" id="portrait" alt="photo of Anne">
 
     <div class="about-container">
-      <h4>Hi, my name is Anne Spitler-Kashuba. I'm a frontend developer living in Western Sonoma
-        County, California.</h4>
+      <div class="about-textbox" id="text">
+        <h4><span>Hi, my name is Anne Spitler-Kashuba.<br>
+            I'm a frontend developer living in Western Sonoma
+            County, California.</span></h4>
 
-      <p>
-        My goal is to help build and maintain sites that are
-        well-crafted from the inside out. Clear,
-        responsive code behind the scenes and
-        accessible content onscreen.</p>
-      <p>
-        I am looking for a diverse team whose members enjoy the creative process, appreciate how differing approaches
-        and perspectives make outcomes stronger, and value knowledge-sharing and life-long learning.
-      </p>
-      <p>
-        I bring a diverse set of personal and professional abilities developed while working in healthcare and
-        education settings, combined
-        with a life-long love for
-        the arts and making things.</p>
-      <p>
-        When I'm not coding, I'm making and enjoying tasty food, learning languages, collecting textiles,
-        and making art.</p>
+        <p>
+          My goal is to build sites that are
+          well-crafted from the inside out. Clear,
+          responsive code behind the scenes and
+          accessible content onscreen.</p>
+        <p>
+          I am looking for a diverse team whose members enjoy the creative process, appreciate how differing approaches
+          and perspectives make outcomes stronger, and value knowledge-sharing and life-long learning.
+        </p>
+        <p>
+          I bring a diverse set of personal and professional abilities developed while working in healthcare and
+          education settings, combined
+          with a life-long love for
+          the arts and making things.</p>
+        <p>
+          When I'm not coding, I'm making and enjoying tasty food, learning languages, collecting textiles,
+          and making art.</p>
 
-      <p>Personal goal: visiting as many wonderful bakeries as possible around the world. (Bakery recommendations
-        are welcome!)</p>
+        <p><span>Personal goal</span> Visiting as many wonderful bakeries as possible around the world. (Bakery
+          recommendations
+          are welcome!)</p>
+      </div>
     </div>
   </section>
   <!-- end of about section -->
 
-  <footer class="contact" id="contact" aria-label="contact">
+  <footer class="contact" id="contact" aria-label="contact Anne">
     <!-- footer with contact info and icon links -->
     <!-- contact links: email, phone, twitter, github, LinkedIn) -->
     <div class="content-wrapper">
@@ -253,7 +266,7 @@
               01 + 916-425-7235
             </p>
             <p>
-              <a href="mailto:anne.sk.slp@gmail.com">anne.sk.dev@gmail.com</a>
+              <a href="mailto:anne.sk.slp@gmail.com" aria-label="send email">anne.sk.dev@gmail.com</a>
             </p>
           </address>
         </div>
@@ -262,16 +275,15 @@
 
           <div class="social-icons">
             <p>
-              <a href="http://linkedin.com/in/anne-spitler-kashuba-a6a26863" target="_blank">
-                <img src="img/linkedin.png" class="social-linkedin"
-                  aria-label="Linkedin icon by Unicons from icon scount"></i>
+              <a href="http://linkedin.com/in/anne-spitler-kashuba-a6a26863" target="_blank"
+                aria-label="visit Anne on LinkedIn">
+                <img src="img/linkedin.png" class="social-linkedin" alt="Linkedin icon">
               </a>
             </p>
 
             <p>
-              <a href="http://github.com/wesiptea" target="_blank">
-                <img src="img/github-45px.png" class="social-linkedin"
-                  aria-label="Github icon by Unicons from icon scount"></i>
+              <a href="http://github.com/wesiptea" target="_blank" aria-label="Anne's github link">
+                <img src="img/github-45px.png" class="social-linkedin" alt="Github icon">
               </a>
             </p>
 
@@ -284,8 +296,7 @@
     </div>
     <!--end of social div-->
 
-    </div>
-    </div>
+
     <!--end of footer content-wrapper-->
 
     <div class="copyright">
