--- a/index.html
+++ b/index.html
@@ -28,8 +28,10 @@
   <meta name="theme-color" content="#fafafa">
 
   <!-- google fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Karla:wght@200;300;500;600;700&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Domine:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Bellota:wght@300;400;700&display=swap" rel="stylesheet">
+  <!-- <link href="https://fonts.googleapis.com/css2?family=Karla:wght@200;300;500;600;700&display=swap" rel="stylesheet"> -->
+  <!-- <link href="https://fonts.googleapis.com/css2?family=Domine:wght@400;500;600;700&display=swap" rel="stylesheet"> -->
 
   <!-- icons -->
   <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
@@ -58,7 +60,7 @@
 
       <div class="name-band">
         <h1>anne.sk</h1>
-        <h2><span>frontend<br> developer</span></h2>
+        <h2><span>frontend developer</span></h2>
 
         <h2>accessibility<br>
           &amp; design-focused
@@ -233,7 +235,7 @@
           and perspectives make outcomes stronger, and value knowledge-sharing and life-long learning.
         </p>
         <p>
-          I bring a diverse set of personal and professional abilities developed while working in healthcare and
+          I bring a diverse set of personal and professional strengths developed while working in healthcare and
           education settings, combined
           with a life-long love for
           the arts and making things.</p>
@@ -243,7 +245,7 @@
 
         <p><span>Personal goal</span> Visiting as many wonderful bakeries as possible around the world. (Bakery
           recommendations
-          are welcome!)</p>
+          are always welcome!)</p>
       </div>
     </div>
   </section>
