Update to portfolio skills

--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
         <p>Tools: CodeSandBox.
         </p> -->
         <div>
-          <button class="button-skills" role="button">React</button>
-          <button class="button-skills" role="button">JSX</button>
+          <p class="portfolio-skills">React</p>
+          <p class="portfolio-skills">JSX</p>
         </div>
 
         <a href="https://e5pmvy.csb.app/" target="_blank" aria-label="sticky note app live page">
@@ -113,9 +113,9 @@
           portfolio on GitHub and create a searchable gallery.</p>
         <p>Tools: Git and GitHub</p> -->
         <div>
-          <button class="button-skills" role="button">VanillaJS</button>
-          <button class="button-skills" role="button">API</button>
-          <button class="button-skills" role="button">GitHub</button>
+          <p class="portfolio-skills">VanillaJS</p>
+          <p class="portfolio-skills">API</p>
+          <p class="portfolio-skills">GitHub</p>
         </div>
 
         <a href="https://wesiptea.github.io/github-repo-gallery/" target="_blank"
@@ -138,9 +138,9 @@
         <!-- <p>Built in JavaScript including manipulating the DOM and pulling data from APIs.</p>
         <p>Tools: GitHub.</p> -->
         <div>
-          <button class="button-skills" role="button">VanillaJS</button>
-          <button class="button-skills" role="button">API</button>
-          <button class="button-skills" role="button">GitHub</button>
+          <p class="portfolio-skills">VanillaJS</p>
+          <p class="portfolio-skills">API</p>
+          <p class="portfolio-skills">GitHub</p>
         </div>
 
         <a href="https://wesiptea.github.io/guess-the-word/" target="_blank" aria-label="guess the word live page link">
@@ -161,9 +161,9 @@
           Typography.</p>
         <p>Tools: Photoshop design comp, Chrome DevTools, GitHub Pages</p> -->
         <div>
-          <button class="button-skills" role="button">HTML5</button>
-          <button class="button-skills" role="button">CSS3</button>
-          <button class="button-skills" role="button">Flexbox</button>
+          <p class="portfolio-skills">HTML5</p>
+          <p class="portfolio-skills">CSS3</p>
+          <p class="portfolio-skills">Flexbox</p>
         </div>
 
         <a href="https://wesiptea.github.io/unplugged-retreat-updated/" target="_blank"
@@ -181,7 +181,7 @@
   <section class="skills-section" id="skills" aria-label="my skills">
     <!-- additional information about abilities - tech and soft? -->
     <div class="skills" id="skills-background">
-      <h3>Skills</h3>
+      <h3>Tech Skills</h3>
       <ul>
         <li>HTML5</li>
         <li>CSS3</li>
@@ -236,12 +236,13 @@
         </p>
         <p>
           I bring a diverse set of personal and professional strengths developed while working in healthcare and
-          education settings, combined
-          with a life-long love for
-          the arts and making things.</p>
+          education settings, combined with a life-long love for
+          the arts and making things.
+        </p>
         <p>
-          When I'm not coding, I'm making and enjoying tasty food, learning languages, collecting textiles,
-          and making art.</p>
+          <span>When I'm not coding</span> I enjoy making, or reading about, tasty food, studying languages,
+          collecting textiles from around the world or making art.
+        </p>
 
         <p><span>Personal goal</span> Visiting as many wonderful bakeries as possible around the world. (Bakery
           recommendations
