Multiple updates to Portfolio and Skills sections

--- a/index.html
+++ b/index.html
@@ -93,8 +93,9 @@
           <p class="portfolio-skills">JSX</p>
         </div>
 
-        <a href="https://e5pmvy.csb.app/" target="_blank" aria-label="sticky note app live page">
-          <button class="button-52" role="button">Live Page</button>
+        <a href="https://e5pmvy.csb.app/" class="link" target="_blank" aria-label="sticky note app live page">
+          <!-- <button  role="button">Live Page</button> -->
+          Live Page
         </a>
       </div>
 
@@ -118,10 +119,8 @@
           <p class="portfolio-skills">GitHub</p>
         </div>
 
-        <a href="https://wesiptea.github.io/github-repo-gallery/" target="_blank"
-          aria-label="github repository live page link">
-          <button class="button-52" role="button">Live Page</button>
-        </a>
+        <a href="https://wesiptea.github.io/github-repo-gallery/" class="link" target="_blank"
+          aria-label="github repository live page link">Live Page</a>
       </div>
 
       <div class="portfolio-piece">
@@ -143,8 +142,8 @@
           <p class="portfolio-skills">GitHub</p>
         </div>
 
-        <a href="https://wesiptea.github.io/guess-the-word/" target="_blank" aria-label="guess the word live page link">
-          <button class="button-52" role="button">Live Page</button>
+        <a href="https://wesiptea.github.io/guess-the-word/" class="link" target="_blank"
+          aria-label="guess the word live page link">Live Page
         </a>
       </div>
 
@@ -166,9 +165,8 @@
           <p class="portfolio-skills">Flexbox</p>
         </div>
 
-        <a href="https://wesiptea.github.io/unplugged-retreat-updated/" target="_blank"
-          aria-label="unplugged retreats website live site link">
-          <button class="button-52" role="button">Live Page</button>
+        <a href="https://wesiptea.github.io/unplugged-retreat-updated/" class="link" target="_blank"
+          aria-label="unplugged retreats website live site link">Live Page
         </a>
       </div>
 
