Edits to aria elements

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
   <header class="header-color">
 
-    <div class="sticky" aria-label="navigation bar">
+    <div class="sticky">
       <nav>
         <ul>
           <li><a href="#portfolio" aria-label="portfolio hyperlink">Portfolio</a></li>
@@ -56,7 +56,7 @@
       </nav>
     </div>
 
-    <div class="content-wrapper" aria-label="welcome to Anne's portfolio website">
+    <div class="content-wrapper">
 
       <div class="name-band">
         <h1>anne.sk</h1>
