Edit to contact

--- a/index.html
+++ b/index.html
@@ -263,8 +263,8 @@
           </p> -->
           <address>
             <p>
-              call | text | WhatsApp<br>
-              01 + 916-425-7235
+              <!-- call | text | WhatsApp<br>
+              01 + 916-425-7235 -->
             </p>
             <p>
               <a href="mailto:anne.sk.slp@gmail.com" aria-label="send email">anne.sk.dev@gmail.com</a>
