--- a/index.html
+++ b/index.html
@@ -233,7 +233,8 @@
           and perspectives make outcomes stronger, and value knowledge-sharing and life-long learning.
         </p>
         <p>
-          I bring a diverse set of personal and professional strengths developed while working in healthcare and
+          I bring a diverse set of personal and professional strengths developed
+          while working in healthcare and
           education settings, combined with a life-long love for
           the arts and making things.
         </p>
@@ -264,7 +265,7 @@
           <address>
             <p>
               <!-- call | text | WhatsApp<br>
-              01 + 916-425-7235 -->
+              01 + ...ph number here-->
             </p>
             <p>
               <a href="mailto:anne.sk.slp@gmail.com" aria-label="send email">anne.sk.dev@gmail.com</a>
